A few minor cosmetic fixes to the demos. The Full LaTeX Input demo now renders much more nicely on IE, and the "no MatML" warning is now issued in the correct circumstances.
git-svn-id: https://svn.code.sf.net/p/snuggletex/code/trunk@575 cfd59bc9-af4b-0410-a4ae-d9b3a5cde016

--- a/snuggletex-webapp/src/main/webapp/includes/webapp.css
+++ b/snuggletex-webapp/src/main/webapp/includes/webapp.css
@@ -158,6 +158,7 @@ pre.verbatim, .note, .result {
   padding: 1em;
   color: #333366;
   border: 1px solid #333366;
+  overflow: auto;
   -moz-border-radius: 1em;
   -webkit-border-radius: 1em;
 }
@@ -169,6 +170,14 @@ pre.verbatim, .note, .result {
   color: black;
   border: none;
   font-weight: bold;
+}
+
+fieldset {
+  border: none;
+}
+
+textarea {
+  width: 100%;
 }
 
 .inputBox {
@@ -287,5 +296,6 @@ a.upconversionExample {
 }
 
 #maincontent li {
+  margin-top: 1em;
   margin-bottom: 1em;
 }
